#15 - lol 챔피언 추천 시스템 개발
* 챔피언 테이블, 챔피언 연관관계 테이블 설계 및 생성
* 챔피언 도메인 작성
* 챔피언 repository 및 mapper 작성
* 챔피언 service 및 controller 작성
* champs 페이지 작성

--- a/jwgg/src/main/resources/messages.properties
+++ b/jwgg/src/main/resources/messages.properties
@@ -14,3 +14,8 @@ page.updateItem=상품 수정
 
 button.save=저장
 button.cancel=취소
+
+label.champ.champName=추천 챔피언
+label.champ.champLine=역할군
+
+page.champs=추천 챔피언 목록
