#21 - 카운터 관계 등록 기능 추가

--- a/jwgg/src/main/resources/messages.properties
+++ b/jwgg/src/main/resources/messages.properties
@@ -11,11 +11,14 @@ page.items=상품 목록
 page.item=상품 상세
 page.addItem=상품 등록
 page.updateItem=상품 수정
+page.addCounter = 카운터 등록
 
 button.save=저장
 button.cancel=취소
 
 label.champ.champName=추천 챔피언
 label.champ.champLine=역할군
+label.champ.registerChampName=챔피언 이름
+label.champ.counter=카운터 챔피언
 
 page.champs=추천 챔피언 목록
